fix(linting): fix golangci-lint errors
